	PR target/46434 	* config/crx/crx.c (crx_expand_epilogue): Remove unused variable. Index: config/crx/crx.c =================================================================== --- config/crx/crx.c	(revision 166609) +++ config/crx/crx.c	(working copy) @@ -613,6 +613,8 @@ static int crx_addr_reg_p (rtx addr_reg)        return FALSE;      }

+  gcc_assert (REGNO (reg) != CC_REGNUM);
+
   return TRUE;
 }
 
@@ -1439,17 +1441,12 @@ crx_expand_prologue (void)
 void
 crx_expand_epilogue (void)
 {
-  rtx return_reg;
-
   /* Nonzero if we need to return and pop only RA. This will generate a
    * different insn. This differentiate is for the peepholes for call as last
    * statement in function. */
   int only_popret_RA = (save_regs[RETURN_ADDRESS_REGNUM]
 			&& (sum_regs == UNITS_PER_WORD));
 
-  /* Return register.  */
-  return_reg = gen_rtx_REG (Pmode, RETURN_ADDRESS_REGNUM);
-
   if (frame_pointer_needed)
     /* Restore the stack pointer with the frame pointers value */
     emit_move_insn (stack_pointer_rtx, frame_pointer_rtx);


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@166954 138bc75d-0d04-0410-961f-82ee72b054a4